优化添加内容

--- a/themes/butterfly/source/css/_sxiaohe-style/home/hometop.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/home/hometop.css
@@ -27,7 +27,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
-    overflow: auto;
+    overflow: hidden;
     overflow-x: score;
     border-radius: 11px;
 }
