--- a/themes/butterfly/layout/includes/css-neil.pug
+++ b/themes/butterfly/layout/includes/css-neil.pug
@@ -1,23 +1,3 @@
-style(type='text/css')
-  | .pace {
-  |   -webkit-pointer-events: none;
-  |   pointer-events: none;
-  |   -webkit-user-select: none;
-  |   -moz-user-select: none;
-  |   user-select: none;
-  | }
-  | .pace-inactive {
-  |   display: none;
-  | }
-  | .pace .pace-progress {
-  |   background: #29d;
-  |   position: fixed;
-  |   z-index: 2000;
-  |   top: 0;
-  |   right: 100%;
-  |   width: 100%;
-  |   height: 2px;
-  | }
 script(type='text/javascript')
   | // 注册 Service Worker 的函数
   | function registerServiceWorker() {
@@ -127,4 +107,108 @@ script(type='text/javascript')
   |   typeof utterancesTheme === 'function' && utterancesTheme();
   |   typeof FB === 'object' && window.loadFBComment();
   |   window.DISQUS && document.getElementById('disqus_thread').children.length && setTimeout(() => window.disqusReset(), 200);
+  | }   
+script(type='text/javascript')
+  | 
+  | // 节流阀
+  | var percentFlag = false;
+  | 
+  | function essayScroll() {
+  |   let a = document.documentElement.scrollTop || window.pageYOffset; // 卷去高度
+  |   const waterfallResult = a % document.documentElement.clientHeight; // 卷去一个视口
+  |   // 修正：将未定义的 result 改为 waterfallResult
+  |   waterfallResult <= 99 || (waterfallResult = 99);
+  | 
+  |   if (
+  |     !percentFlag &&
+  |     waterfallResult + 100 >= document.documentElement.clientHeight &&
+  |     document.querySelector("#waterfall")
+  |   ) {
+  |     // console.info(waterfallResult, document.documentElement.clientHeight);
+  |     setTimeout(() => {
+  |       waterfall("#waterfall");
+  |     }, 500);
+  |   } else {
+  |     setTimeout(() => {
+  |       document.querySelector("#waterfall") && waterfall("#waterfall");
+  |     }, 500);
+  |   }
+  | 
+  |   const r = window.scrollY + document.documentElement.clientHeight;
+  |   let p = document.getElementById("post-comment") || document.getElementById("footer");
+  | 
+  |   (p.offsetTop + p.offsetHeight / 2 < r || 90 < waterfallResult) && (percentFlag = true);
   | }
+  | 
+  | function replaceAll(e, n, t) {
+  |   return e.split(n).join(t);
+  | }
+  | 
+  | var anzhiyu = {
+  |   diffDate: function (d, more = false) {
+  |     const dateNow = new Date();
+  |     const datePost = new Date(d);
+  |     const dateDiff = dateNow.getTime() - datePost.getTime();
+  |     const minute = 1000 * 60;
+  |     const hour = minute * 60;
+  |     const day = hour * 24;
+  |     const month = day * 30;
+  | 
+  |     let result;
+  |     if (more) {
+  |       const monthCount = dateDiff / month;
+  |       const dayCount = dateDiff / day;
+  |       const hourCount = dateDiff / hour;
+  |       const minuteCount = dateDiff / minute;
+  | 
+  |       if (monthCount >= 1) {
+  |         result = datePost.toLocaleDateString().replace(/\//g, "-");
+  |       } else if (dayCount >= 1) {
+  |         result = parseInt(dayCount) + " " + GLOBAL_CONFIG.date_suffix.day;
+  |       } else if (hourCount >= 1) {
+  |         result = parseInt(hourCount) + " " + GLOBAL_CONFIG.date_suffix.hour;
+  |       } else if (minuteCount >= 1) {
+  |         result = parseInt(minuteCount) + " " + GLOBAL_CONFIG.date_suffix.min;
+  |       } else {
+  |         result = GLOBAL_CONFIG.date_suffix.just;
+  |       }
+  |     } else {
+  |       result = parseInt(dateDiff / day);
+  |     }
+  |     return result;
+  |   },
+  |   changeTimeInEssay: function () {
+  |     document.querySelector("#bber") &&
+  |       document.querySelectorAll("#bber time").forEach(function (e) {
+  |         var t = e;
+  |         var datetime = t.getAttribute("datetime");
+  |         t.innerText = anzhiyu.diffDate(datetime, true);
+  |         t.style.display = "inline";
+  |       });
+  |   },
+  |   reflashEssayWaterFall: function () {
+  |     document.querySelector("#waterfall") &&
+  |       setTimeout(function () {
+  |         waterfall("#waterfall");
+  |         document.getElementById("waterfall").classList.add("show");
+  |       }, 500);
+  |   },
+  |   commentText: function (e) {
+  |     if (e == "undefined" || e == "null") e = "好棒！";
+  |     var n = document.getElementsByClassName("el-textarea__inner")[0];
+  |     var t = document.createEvent("HTMLEvents");
+  |     if (!n) return;
+  |     t.initEvent("input", true, true);
+  |     var o = replaceAll(e, "\n", "\n> ");
+  |     n.value = "> " + o + "\n\n";
+  |     n.dispatchEvent(t);
+  |     var i = document.querySelector("#post-comment").offsetTop;
+  |     window.scrollTo(0, i - 80);
+  |     n.focus();
+  |     n.setSelectionRange(-1, -1);
+  |     document.getElementById("comment-tips") && document.getElementById("comment-tips").classList.add("show");
+  |   }
+  | };
+  | 
+  | anzhiyu.changeTimeInEssay();
+  | anzhiyu.reflashEssayWaterFall();
