优化添加内容

--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -40,7 +40,7 @@
         |     <div class="top_post_item">
         |       <div class="post_cover">
         |         <a href="/article/${i.abbrlink}.html" title="${i.title}">
-        |           <img class="post_bg entered loaded" src="${i.cover}" alt="${i.title}" data-no-lazy>
+        |           <img class="post_bg entered loaded" src="${i.cover}" alt="${i.title}" data-no-lazy srcset>
         |           <div class="post_cover_info">
         |             <p class="post_cover_text">${i.description}</p>
         |           </div>
