--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -194,7 +194,7 @@ a.category-list-link {
 #recent-posts>.recent-post-item .post_cover img.post_bg {
     animation: fadeIn 1s ease;
 }
-.avatar-img img:hover {
+.avatar-img img {
     animation: fadeIn 1s ease;
 }
 #aside-content .aside-list>.aside-list-item .thumbnail>img, #recent-posts>.recent-post-item .post_cover img.post_bg, .article-sort-item-img img, .imgHover {
