优化添加内容

--- a/themes/butterfly/layout/includes/head/preconnect.pug
+++ b/themes/butterfly/layout/includes/head/preconnect.pug
@@ -1,4 +1,7 @@
 link(rel="preconnect" href="//lf6-cdn-tos.bytecdntp.com/")
+link(href="https://www.sxiaohe.top" rel="dns-prefetch")
+link(href="https://lf6-cdn-tos.bytecdntp.com" rel="dns-prefetch")
+link(href="https://lib.baomitu.com" rel="dns-prefetch")
 
 if theme.google_analytics
   link(rel="preconnect" href="//www.google-analytics.com" crossorigin='')
