--- a/themes/butterfly/layout/includes/additional-js.pug
+++ b/themes/butterfly/layout/includes/additional-js.pug
@@ -1,6 +1,6 @@
 div
-  script(src=url_for(theme.asset.utils))
-  script(src=url_for(theme.asset.main))
+  //- script(defer src=url_for(theme.asset.utils))
+  //- script(defer src=url_for(theme.asset.main))
 
   if theme.translate.enable
     script(src=url_for(theme.asset.translate))
@@ -24,11 +24,11 @@ div
 
   //- search
   if theme.algolia_search.enable
-    script(src=url_for(theme.asset.algolia_search_v4))
-    script(src=url_for(theme.asset.instantsearch_v4))
-    script(src=url_for(theme.asset.algolia_js))
+    script(defer src=url_for(theme.asset.algolia_search_v4))
+    script(defer src=url_for(theme.asset.instantsearch_v4))
+    script(defer src=url_for(theme.asset.algolia_js))
   else if theme.local_search.enable
-    script(src=url_for(theme.asset.local_search))
+    script(defer src=url_for(theme.asset.local_search))
 
   .js-pjax
     if needLoadCountJs
