优化添加内容

--- a/themes/butterfly/layout/includes/additional-js.pug
+++ b/themes/butterfly/layout/includes/additional-js.pug
@@ -1,5 +1,5 @@
 div
-  //- script(defer src=url_for(theme.asset.utils))
+  script(defer src=url_for(theme.asset.utils))
   //- script(defer src=url_for(theme.asset.main))
 
   if theme.translate.enable
