优化添加内容

--- a/themes/butterfly/layout/includes/additional-js.pug
+++ b/themes/butterfly/layout/includes/additional-js.pug
@@ -1,23 +1,23 @@
 div
-  script(defer src=url_for(theme.asset.utils))
-  script(defer src=url_for(theme.asset.main))
+  script(src=url_for(theme.asset.utils))
+  script(src=url_for(theme.asset.main))
 
   if theme.translate.enable
-    script(src=url_for(theme.asset.translate))
+    script(defer src=url_for(theme.asset.translate))
 
   if theme.medium_zoom
-    script(src=url_for(theme.asset.medium_zoom))
+    script(defer src=url_for(theme.asset.medium_zoom))
   else if theme.fancybox
-    script(src=url_for(theme.asset.fancybox_v4))
+    script(defer src=url_for(theme.asset.fancybox_v4))
 
   if theme.instantpage
-    script(src=url_for(theme.asset.instantpage), type='module')
+    script(defer src=url_for(theme.asset.instantpage), type='module')
 
   if theme.lazyload.enable
-    script(src=url_for(theme.asset.lazyload))
+    script(defer src=url_for(theme.asset.lazyload))
 
   if theme.snackbar.enable
-    script(src=url_for(theme.asset.snackbar))
+    script(defer src=url_for(theme.asset.snackbar))
 
   if theme.pangu.enable
     != partial("includes/third-party/pangu.pug", {}, { cache: true })
