--- a/themes/butterfly/layout/includes/header/menu_item.pug
+++ b/themes/butterfly/layout/includes/header/menu_item.pug
@@ -1,4 +1,6 @@
 if theme.menu
+  //- for mobile sidebar
+  - let sidebarChildHide = theme.hide_sidebar_menu_child ? 'hide' : ''
   .menus_items
     each value, label in theme.menu
       if typeof value !== 'object'
