--- a/themes/butterfly/layout/includes/header/nav.pug
+++ b/themes/butterfly/layout/includes/header/nav.pug
@@ -22,14 +22,14 @@ nav#nav
     !=partial('includes/header/menu_item', {}, {cache: true})
 
     if (theme.algolia_search.enable || theme.local_search.enable)
-      div.nav-button#search-button
+      .nav-button#search-button
         a.site-page.social-icon.search
           i.fas.fa-search.fa-fw
 
-      div.nav-button#search-button
+      .nav-button#search-button
         a.nav-rightbutton.site-page.darkmode_switchbutton(onclick="switchDarkMode()")
           i.fas.fa-adjust
-          
-    #toggle-menu
+
+    .nav-button#toggle-menu
       a.site-page
         i.fas.fa-bars.fa-fw
