--- a/themes/sxiaohethemes/layout/includes/loading/pace.pug
+++ b/themes/sxiaohethemes/layout/includes/loading/pace.pug
@@ -1,2 +1,3 @@
-link(rel="stylesheet", href=url_for(theme.preloader.pace_css_url || theme.asset.pace_default_css))
-script(src=url_for(theme.asset.pace_js))
+link(as="style" href=url_for(theme.preloader.pace_css_url || theme.asset.pace_default_css) onload="this.rel='stylesheet'" rel="preload")
+noscript
+  link(href=url_for(theme.preloader.pace_css_url || theme.asset.pace_default_css) rel="stylesheet")
