--- a/themes/sxiaohethemes/layout/includes/header/nav.pug
+++ b/themes/sxiaohethemes/layout/includes/header/nav.pug
@@ -10,9 +10,14 @@ nav#nav
             a.back-menu-item(href='/', title='前往博客主页', target='_blank', one-link-mark='yes')
               img.back-menu-item-icon(src='/img/avatar.avif')
               span.back-menu-item-text 博客
-            a.back-menu-item(href='https://www.cloud.anheyu.com/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
+          .back-menu-list-title 项目
+          .back-menu-list
+            a.back-menu-item(href='https://cloud.sxiaohe.top/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
               img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
-              span.back-menu-item-text 云盘主页
+              span.back-menu-item-text 晓河云盘
+            a.back-menu-item(href='https://jsd.sxiaohe.top/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
+              img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
+              span.back-menu-item-text jsd镜像网站
 
     a#site-name(href=url_for('/'))
       .title #[=config.title]
