--- a/themes/sxiaohethemes/layout/includes/mixins/post-ui.pug
+++ b/themes/sxiaohethemes/layout/includes/mixins/post-ui.pug
@@ -17,22 +17,28 @@ mixin postUI(posts)
             img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title)
       .recent-post-info(class=no_cover)
         a.article-title(href=url_for(link) title=title)= title
-        .article-meta-wrap
           if (is_home() && (article.top || article.sticky > 0))
             span.article-meta
-              i.fas.fa-thumbtack.sticky
+              svg.meta_icon(style="width:16px;height:16px;position:relative;top:3px").post-ui-icon
+                use(xlink:href='#icon-tuding')
               span.sticky= _p('sticky')
-              span.article-meta-separator |
+        .article-meta-wrap
+          //- i.fas.fa-thumbtack.sticky
           if (theme.post_meta.page.date_type)
             span.post-meta-date
               if (theme.post_meta.page.date_type === 'both')
-                i.far.fa-calendar-alt
+                //- i.far.fa-calendar-
+                svg.meta_icon(style="width:21px;height:21px;position:relative;top:6px").post-ui-icon
+                  use(xlink:href='#icon-rili')
                 span.article-meta-label=_p('post.created')
                 time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))=date(article.date, config.date_format)
                 span.article-meta-separator |
-                i.fas.fa-history
+                //- i.fas.fa-history
+                svg.meta_icon(style="width:13px;height:13px;position:relative;top:2px").post-ui-icon
+                  use(xlink:href='#icon-gengxin1')
                 span.article-meta-label=_p('post.updated')
                 time.post-meta-date-updated(datetime=date_xml(article.updated) title=_p('post.updated') + ' ' + full_date(article.updated))=date(article.updated, config.date_format)
+                span.article-meta-separator |
               else
                 - let data_type_updated = theme.post_meta.page.date_type === 'updated'
                 - let date_type = data_type_updated ? 'updated' : 'date'
@@ -41,10 +47,13 @@ mixin postUI(posts)
                 i(class=date_icon)
                 span.article-meta-label=date_title
                 time(datetime=date_xml(article[date_type]) title=date_title + ' ' + full_date(article[date_type]))=date(article[date_type], config.date_format)
+          br
           if (theme.post_meta.page.categories && article.categories.data.length > 0)
             span.article-meta
               span.article-meta-separator |
-              i.fas.fa-inbox
+              //- i.fas.fa-inbox
+              svg.meta_icon(style="width:12px;height:12px;position:relative;top:1px").post-ui-icon
+                use(xlink:href='#icon-fenlei')
               each item, index in article.categories.data
                 a(href=url_for(item.path)).article-meta__categories #[=item.name]
                 if (index < article.categories.data.length - 1)
@@ -52,7 +61,9 @@ mixin postUI(posts)
           if (theme.post_meta.page.tags && article.tags.data.length > 0)
             span.article-meta.tags
               span.article-meta-separator |
-              i.fas.fa-tag
+              //- i.fas.fa-tag
+              svg.meta_icon(style="width:13px;height:13px;position:relative;top:2px").post-ui-icon
+                use(xlink:href='#icon-biaoqian')
               each item, index in article.tags.data
                 a(href=url_for(item.path)).article-meta__tags #[=item.name]
                 if (index < article.tags.data.length - 1)
