优化添加内容

--- a/themes/sxiaohe/layout/includes/additional-js.pug
+++ b/themes/sxiaohe/layout/includes/additional-js.pug
@@ -66,4 +66,4 @@ div
     != partial("includes/third-party/pjax", {}, { cache: true })
 
   if theme.busuanzi.site_uv || theme.busuanzi.site_pv || theme.busuanzi.page_pv
-    script(async data-pjax src='/js/busuanzi.js')
+    script(async data-pjax src='https://jsd.onmicrosoft.cn/npm/penndu@16.0.0/bsz.js')
