--- a/themes/sxiaohe/layout/includes/widget/card_webinfo.pug
+++ b/themes/sxiaohe/layout/includes/widget/card_webinfo.pug
@@ -20,12 +20,12 @@ if theme.aside.card_webinfo.enable
       if theme.busuanzi.site_uv
         .webinfo-item
           .item-name= _p('aside.card_webinfo.site_uv_name') + " :"
-          .item-count#busuanzi_value_site_uv
+          .item-count#busuanzi_site_uv
             i.fa-solid.fa-spinner.fa-spin
       if theme.busuanzi.site_pv
         .webinfo-item
           .item-name= _p('aside.card_webinfo.site_pv_name') + " :"
-          .item-count#busuanzi_value_site_pv
+          .item-count#busuanzi_site_pv
             i.fa-solid.fa-spinner.fa-spin
       if theme.aside.card_webinfo.last_push_date
         .webinfo-item
