优化添加内容

--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -8,15 +8,15 @@ nav#nav
           .back-menu-list-title 网页
           .back-menu-list
             a.back-menu-item(href='/', title='前往博客主页', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='/img/avatar.avif')
+              img.back-menu-item-icon(src='/img/avatar.avif' alt="博客图标")
               span.back-menu-item-text 博客
           .back-menu-list-title 项目
           .back-menu-list
             a.back-menu-item(href='https://cloud.sxiaohe.top/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
+              img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg' alt="云盘图标")
               span.back-menu-item-text 晓河云盘
             a.back-menu-item(href='https://jsd.sxiaohe.top/', rel='external nofollow', title='前往云盘主页', target='_blank', one-link-mark='yes')
-              img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
+              img.back-menu-item-icon(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg' alt="jsd镜像图标")
               span.back-menu-item-text jsd镜像网站
 
     a#site-name(href=url_for('/'))
