--- a/themes/sxiaohe/layout/includes/header/menu_item.pug
+++ b/themes/sxiaohe/layout/includes/header/menu_item.pug
@@ -12,11 +12,10 @@ if theme.menu
         .menus_item
           - const labelArray = label.split('||')
           - const hideClass = labelArray[2] && trim(labelArray[2]) === 'hide' ? 'hide' : ''
-          a.site-page.group(class=`${hideClass}` href='javascript:void(0);' rel="external nofollow")
+          button.site-page.group(class=`${hideClass}` href='javascript:void(0);' rel="external nofollow")
             if labelArray[1]
               i.fa-fw(class=trim(labelArray[1]))
             span=' '+ trim(labelArray[0])
-            i.fas.fa-chevron-down
           ul.menus_item_child
             each val,lab in value 
               - const valArray = val.split('||')
