--- a/themes/sxiaohe/layout/page.pug
+++ b/themes/sxiaohe/layout/page.pug
@@ -1,9 +1,13 @@
 extends includes/layout.pug
 
 block content
+block content
   #page
-    if top_img === false
-      h1.page-title= page.title
+    if page.top_page && page.top_page === true
+      include includes/page/icat_change.pug
+    else
+      if top_img === false
+        h1.page-title= page.title
 
     case page.type
       when 'jike'
