优化添加内容

--- a/themes/sxiaohe/source/css/_sxiaohe-style/style/index.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/style/index.css
@@ -56,6 +56,7 @@
     font-size: 1.4em!important;
 }
 /* 5.侧边栏其他卡片样式调整 */
+/* 5.1.白日显示 */
 #aside-content .card-widget:not(.card-info):not(#card-tuijian):before {
     content: "";
     width: 12.5px;
@@ -69,6 +70,12 @@
 #aside-content .card-widget:not(.card-info):not(#card-tuijian) {
     clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 calc(100% - 52.5px), 12.5px calc(100% - 40px), 12.5px calc(100% - 50px), 0 calc(100% - 62.5px), 0 calc(100% - 82.5px), 12.5px calc(100% - 70px), 12.5px calc(100% - 80px), 0 calc(100% - 92.5px), 0 calc(100% - 112.5px), 12.5px calc(100% - 100px), 12.5px calc(100% - 112.5px), 12.5px calc(100% - 110px), 0 calc(100% - 122.5px), 0 calc(100% - 142.5px), 12.5px calc(100% - 130px), 12.5px calc(100% - 141.5px), 0 calc(100% - 154px), 0 0);
     border-left: none !important;
+}
+/* 5.2.黑月显示 */
+[data-theme="dark"] .layout #aside-content .card-widget:not(.card-info):not(#card-tuijian)::before {
+    height: 104px;
+    bottom: 36px;
+    background: linear-gradient(to top, transparent, rgb(56, 211, 203));
 }
 /* 6.首页文章卡片样式表调整 */
 #recent-posts > .recent-post-item >.recent-post-info > .article-title {
