--- a/themes/sxiaohe/layout/index.pug
+++ b/themes/sxiaohe/layout/index.pug
@@ -3,8 +3,12 @@ extends includes/layout.pug
 block content
   include ./includes/mixins/post-ui.pug
   #recent-posts.recent-posts
-    include includes/sxiaohe_pug/bbtimelist.pug
-    include includes/sxiaohe_pug/hometop.pug
-    include includes/sxiaohe_pug/categoryBar.pug
+    case theme.essay.modeOptions
+      when 'heo'
+        include includes/sxiaohe_pug/home/heo.pug
+      when 'icat'
+        include includes/sxiaohe_pug/home/bbtimelist/icat.pug
+    include includes/sxiaohe_pug/home/hometop.pug
+    include includes/sxiaohe_pug/home/categoryBar.pug
     +postUI
     include includes/pagination.pug
