优化添加内容

--- a/themes/sxiaohe/layout/index.pug
+++ b/themes/sxiaohe/layout/index.pug
@@ -4,7 +4,7 @@ block content
   include ./includes/mixins/post-ui.pug
   #recent-posts.recent-posts
     include includes/heo.pug
-    //- include includes/sxiaohe_pug/home/hometop.pug
+    include includes/sxiaohe_pug/home/hometop.pug
     include includes/sxiaohe_pug/home/categoryBar.pug
     +postUI
     include includes/pagination.pug
