优化添加内容

--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -47,3 +47,4 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     include ./rightside.pug
     !=partial('includes/third-party/search/index', {}, {cache: true})
     include ./additional-js.pug
+    include ./sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
