--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
@@ -2,8 +2,9 @@
   .option
     i.fas.fa-rocket
     .bloktop
-    .text 还不造有啥用滴悬浮模块
+    .text 风吹草地现牛羊
       .strip
+      .something
   .option
     i.fas.fa-cube
     .blok
