--- a/themes/sxiaohe/layout/includes/mixins/post-ui.pug
+++ b/themes/sxiaohe/layout/includes/mixins/post-ui.pug
@@ -19,8 +19,7 @@ mixin postUI(posts)
         a.article-title(href=url_for(link) title=title)= title
           if (is_home() && (article.top || article.sticky > 0))
             span.article-meta
-              svg.meta_icon(style="width:16px;height:16px;position:relative;top:3px").post-ui-icon
-                use(xlink:href='#icon-tuding')
+              i.fas.fa-thumbtack.sticky
               span.sticky= _p('sticky')
         .article-meta-wrap
           //- i.fas.fa-thumbtack.sticky
