--- a/themes/sxiaohe/source/css/_sxiaohe-style/home/index.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/home/index.css
@@ -32,7 +32,7 @@
     background-repeat: no-repeat;
 }
 #svg_bg {
-    background-image: url(https://www.sxiaohe.top/img/background.svg);
+    background-image: url(/img/background.svg);
     -webkit-background-size: initial;
     -moz-background-size: initial;
     background-size: initial;
