--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -1,4 +1,23 @@
 #footer-wrap
+  #footer_icon
+    .icon_left
+      a.icon_link(href="http://foreverblog.cn/go.html" rel="noopener external nofollow" target="_blank" title="虫洞-随机访问十年之约成员博客")
+        i.fa-circle-notch.fa-fw.fa-solid
+      a.icon_link(href="https://travellings.cn" rel="noopener external nofollow" target="_blank" title="开往-随机跳转到另一个加入开往的网页")
+        i.fa-fw.fa-solid.fa-subway
+      a.icon_link(data-pjax-state="" href="/link/" title="友链")
+        i.fa-fw.fa-link.fa-solid
+      a.icon_link(data-pjax-state="" href="/messageboard/" title="留言")
+        i.fa-comment.fa-fw.fa-regular
+    .icon_left
+      a.icon_link(href="/" rel="noopener" target="_blank" title="我的主页")
+        i.fa-compass.fa-fw.fa-solid
+      a.icon_link(href="https://res.abeim.cn/api/qq/?qq=3227988255" rel="noopener external nofollow" target="_blank" title="联系QQ")
+        i.fa-brands.fa-fw.fa-qq
+      a.icon_link(href="https://github.com/661111" rel="noopener external nofollow" target="_blank" title="我的Github主页")
+        i.fa-brands.fa-fw.fa-github
+      a.icon_link(data-pjax-state="" href="mailto:3227988255@qq.com" rel="noopener external nofollow" title="邮件联系")
+        i.fa-envelope.fa-fw.fa-solid
   if theme.footer.owner.enable
     - var now = new Date()
     - var nowYear = now.getFullYear()
