--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -9,7 +9,7 @@
         i.fa-fw.fa-link.fa-solid
       a.icon_link(data-pjax-state="" href="/messageboard/" title="留言")
         i.fa-comment.fa-fw.fa-regular
-    img.entered.footer_logo.loaded(data-lazy-src="https://cdn.qcqx.cn/img/head.webp" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="https://cdn.qcqx.cn/img/head.webp" title="返回顶部")
+    img.entered.footer_logo.loaded(data-lazy-src="/img/avatar.avif?v=d3d8e5e465" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="/img/avatar.avif?v=d3d8e5e465" title="返回顶部")
     .icon_left
       a.icon_link(href="/" rel="noopener" target="_blank" title="我的主页")
         i.fa-compass.fa-fw.fa-solid
