--- a/themes/sxiaohe/source/css/_sxiaohe-style/style/index.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/style/index.css
@@ -264,3 +264,12 @@ img {
 .aplayer.aplayer-fixed {
     left: -300px;
 }
+
+/* 14.修改底部背景 */
+#footer:before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: transparent !important;
+    content: '';
+}
