--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -37,22 +37,16 @@
     .footer_custom_text!=`${theme.footer.custom_text}`
   p#ghbdages
     a.github-badge(href="https://hexo.io/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/hexo.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/hexo.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/hexo.svg" data-ll-status="loaded" src="/img/footer_svg/hexo.svg")
     a.github-badge(href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/butterfly.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/butterfly.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="/img/footer_svg/butterfly.svg")
     a.github-badge(href="https://github.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/github.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/github.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/github.svg" data-ll-status="loaded" src="/img/footer_svg/github.svg")
     a.github-badge(href="https://icp.gov.moe/?keyword=20220160" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/20220160.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/20220160.svg")
-    a.github-badge(href="https://beian.miit.gov.cn/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/2022076449.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/2022076449.svg")
-    a.github-badge(href="https://cloud.tencent.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/tx.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/tx.svg")
-    a.github-badge(href="https://vercel.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/vercel.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/vercel.svg")
-    a.github-badge(href="https://tianli-blog.club/jsd/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/tianlicdn.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/tianlicdn.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/menicp.svg" data-ll-status="loaded" src="/img/footer_svg/menicp.svg")
+    a.github-badge(href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/jsd.svg" data-ll-status="loaded" src="/img/footer_svg/jsd.svg")
     a.github-badge(href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/ypy.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/ypy.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/ypy.svg" data-ll-status="loaded" src="/img/footer_svg/ypy.svg")
     a.github-badge(href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://cdn.qcqx.cn/img/cc.svg" data-ll-status="loaded" src="https://cdn.qcqx.cn/img/cc.svg")
+      img.entered.loaded(data-lazy-src="/img/footer_svg/cc.svg" data-ll-status="loaded" src="/img/footer_svg/cc.svg")
