--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -36,8 +36,8 @@
   if theme.footer.custom_text
     .footer_custom_text!=`${theme.footer.custom_text}`
   .footer-banner-time
-    .timeDate
-    .times
+    span#timeDate
+    span#times
     script.
       if(! (navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))){
       function createtime() {
