--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -3,7 +3,7 @@
     .icon_left
       a.icon_link(href="http://foreverblog.cn/go.html" rel="noopener external nofollow" target="_blank" title="虫洞-随机访问十年之约成员博客")
         i.fa-circle-notch.fa-fw.fa-solid
-      a.icon_link(href="https://travellings.cn" rel="noopener external nofollow" target="_blank" title="开往-随机跳转到另一个加入开往的网页")
+      a.icon_link(href="https://www.travellings.cn/go.html" rel="noopener external nofollow" target="_blank" title="开往-随机跳转到另一个加入开往的网页")
         i.fa-fw.fa-solid.fa-subway
       a.icon_link(data-pjax-state="" href="/link/" title="友链")
         i.fa-fw.fa-link.fa-solid
