--- a/themes/sxiaohe/layout/includes/header/menu_item.pug
+++ b/themes/sxiaohe/layout/includes/header/menu_item.pug
@@ -15,7 +15,7 @@ if theme.menu
           a.site-page.group(rel="external nofollow noreferrer")
             if labelArray[1]
               i.fa-fw(class=trim(labelArray[1]))
-            span=' '+ trim(labelArray[0])
+            span.menuname=' '+ trim(labelArray[0])
             i.fas.fa-chevron-down
           ul.menus_item_child
             each val,lab in value 
