修改配置文件

--- a/themes/sxiaohe/source/css/_sxiaohe-style/menu/othe_menu.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/menu/othe_menu.css
@@ -20,3 +20,7 @@ span.menuname {
     font-weight: 700;
     padding: 0 .8em 0 1em;
 }
+
+#menus>div.menus_items>div>a {
+    padding: 0!important;
+}
